--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,6 +1,8 @@
 body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 section {
@@ -55,25 +57,33 @@ header {
   margin-left: 4px;
 }
 
-.company-logos {
+.logos {
   display: grid;
   grid-template-columns: repeat(3, auto);
   justify-content: space-around;
   align-items: center;
 }
 
-.company-logo {
+.logo {
   max-height: 100px;
   margin-left: 16px;
   margin-right: 16px;
   max-width: 200px;
 }
 
-.page-width {
+.page-style {
   max-width: 1000px;
+  align-self: center;
 }
 
 .section-title {
   margin-top: 8px;
+  color: gray;
 }
 
+.tech-logo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
