--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -17,7 +17,7 @@ section h2 {
 
 header {
   padding: 20px;
-  color: black;
+  color: var(--primary5);
   border-bottom-left-radius: 16px;
   border-bottom-right-radius: 16px;
 }
@@ -72,7 +72,6 @@ header {
 }
 
 .page-style {
-  max-width: 1000px;
   align-self: center;
 }
 
