--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -21,7 +21,7 @@ import '../styles/global.css';
 <title>Jordan Salinas</title>
 <link rel="stylesheet" type="text/css" href="/src/styles/colors.css">
 <link rel="stylesheet" type="text/css" href="/src/styles/global.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
+<link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-42XE8DNX2E"></script>
 <!-- <script>
