--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,4 +1,6 @@
 ---
+import Card from './Card.astro';
+
 type Props = {
   src: string;
   description: string;
@@ -8,27 +10,15 @@ type Props = {
 const { src, description, dates } = Astro.props
 ---
 
-<div class="container">
-  <div class="floater">
-    <img src={src} />
-    <p>{dates}</p>
-  </div>
+<Card>
+  <img src={src} />
+  <p class="dates">{dates}</p>
   <p>{description}</p>
-</div>
+</Card>
 <style>
   img {
     max-height: 80px;
     max-width: 130px;
-  }
-
-  .floater {
-    float: left;
-    color: var(--primary4);
-  }
-
-  .floater p {
-    margin-top: 4px;
-    margin-bottom: 12px;
   }
 
   p {
@@ -36,7 +26,9 @@ const { src, description, dates } = Astro.props
     width: 350px;
   }
 
-  .container {
-    margin: 16px;
+  .dates {
+    color: var(--primary4);
+    font-size: .9rem;
+    margin-bottom: 8px;
   }
 </style>
