--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,14 @@
+:root {
+  --gradient1: linear-gradient(32deg, rgba(120,120,255,1) 22%, rgba(131,234,255,1) 84%);
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
   display: flex;
   flex-direction: column;
   padding-bottom: 40px;
+  align-items: center;
 }
 
 section {
@@ -21,20 +26,6 @@ section h2 {
   align-items: center;
 }
 
-.my-image {
-  height: 150px;
-  min-width: 150px;
-  max-width: 150px;
-  border-radius: 50%;
-  object-fit: cover;
-  object-position: top;
-}
-
-.linkedin-logo {
-  height: 16px;
-  width: 16px;
-  margin-left: 4px;
-}
 
 .logos {
   display: grid;
@@ -50,10 +41,6 @@ section h2 {
   max-width: 200px;
 }
 
-.page-style {
-  align-self: center;
-}
-
 .tech-logo {
   display: flex;
   flex-direction: column;
@@ -62,14 +49,14 @@ section h2 {
 }
 
 h1 {
-  font-size: 60px;
   margin-top: 16px;
   margin-bottom: 4px;
+  font-weight: 800;
 }
 
 h2 {
-  font-size: 40px;
   color: var(--primary4);
+  text-align: center;
 }
 
 h4 {
@@ -77,4 +64,46 @@ h4 {
   margin: 4px 0;
 }
 
+.gradient-text {
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  background-image: var(--gradient1);
+  -webkit-text-fill-color: transparent;
+}
 
+.display-1 {
+  color: var(--primary5);
+}
+
+.display-4 {
+  font-size: 1.1rem;
+}
+
+@media (min-width: 701px) {
+  h1 {
+    font-size: 7rem;
+  }
+
+  h2 {
+    font-size: 2.5rem;
+  }
+
+  .display-1 {
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 700px) {
+  h1 {
+    font-size: 3rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+  }
+
+  .display-1 {
+    font-size: 1.2rem;
+  }
+}
